--- a/app/Resources/views/default/editor.html.twig
+++ b/app/Resources/views/default/editor.html.twig
@@ -7,7 +7,10 @@
                 <h1><span>Welcome to</span> INZYNIERKA </h1>
             </div>
             <div>
-                <textarea id="full-featured-non-premium">Next, use our Get Started docs to setup Tiny!</textarea>
+                {{ form_start(form, {'attr': {'class': 'editorForm', 'novalidate': 'novalidate'} }) }}
+                    {#<textarea class="full-featured-non-premium"></textarea>#}
+                    <button name="submitbtn"></button>
+                {{ form_end(form) }}
             </div>
             {#{{ form_start(form) }}#}
             {#{{ form_end(form) }}#}
@@ -18,15 +21,30 @@
 {% block javascripts %}
     <script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
     <script>
+    $( document ).ready(function() {
+        $(document).on('click', '.niepewne', function (event) {
+            console.log("KLIK");
+            // $(this).css("background-color", "white");
+        });
 
-        tinymce.PluginManager.add("yourPlugin", function() {
-            let test = document.getElementById("dupa");
+        // $(document).on('submit', '.editorForm', function(e){
+        //     console.log('ZATRZYMANY FORM');
+        //    e.preventDefault();
+        //
+        // });
+
+        let $doc = null;
+        let $body = null;
+
+        tinymce.PluginManager.add("yourPlugin", function () {
+            let test = document.getElementsByClassName(".niepewne");
             // alert('D');
             // alert(test);
-            $(document).on('mouseover','#dupa', function (event) {
-                $("#dupa").css("background-color", "yellow");
+            $(tinymce).on('click', '.niepewne', function (event) {
+                console.log("KLIK");
+                // $(this).css("background-color", "white");
             });
-            // test.addEventListener("mouseenter", function( event ) {
+            // test.addEventListener("click", function( event ) {
             //     alert('D');
             //     setTimeout(function() {
             //         event.target.style.color = "";
@@ -40,9 +58,10 @@
         // });
 
         tinymce.init({
-            selector: 'textarea#full-featured-non-premium',
+            selector: 'textarea.full-featured-non-premium',
             plugins: 'print preview fullpage paste importcss searchreplace autolink autosave save directionality code visualblocks visualchars fullscreen image link media template codesample table charmap hr pagebreak nonbreaking anchor toc insertdatetime advlist lists wordcount imagetools textpattern noneditable help charmap quickbars emoticons yourPlugin',
             imagetools_cors_hosts: ['picsum.photos'],
+            extended_valid_elements: "script[src|async|defer|type|charset]",
             menubar: 'file edit view insert format tools table help',
             toolbar: 'undo redo | bold italic underline strikethrough | fontselect fontsizeselect styleselect formatselect | alignleft aligncenter alignright alignjustify | outdent indent |  numlist bullist | forecolor backcolor removeformat | pagebreak | charmap emoticons | fullscreen  preview save print | insertfile image media template link anchor codesample | ltr rtl',
             content_style: '' +
@@ -66,102 +85,113 @@
                 '.lineheight36px { line-height: 36px; }' +
                 '.lineheight38px { line-height: 38px; }' +
                 '.lineheight40px { line-height: 40px; }' +
+                '.lineheight44px { line-height: 44px; }' +
+                '.lineheight48px { line-height: 48px; }' +
+                '.lineheight56px { line-height: 56px; }' +
                 '.tablerow1 { background-color: #D3D3D3; }',
             formats: {
-                '2px': { selector: 'span,p,h1,h2,h3,h4,h5,h6,td,th,div,ul,ol,li,table,img', classes: 'lineheight2px' },
-                '4px': { selector: 'span,p,h1,h2,h3,h4,h5,h6,td,th,div,ul,ol,li,table,img', classes: 'lineheight4px' },
-                '6px': { selector: 'span,p,h1,h2,h3,h4,h5,h6,td,th,div,ul,ol,li,table,img', classes: 'lineheight6px' },
-                '8px': { selector: 'span,p,h1,h2,h3,h4,h5,h6,td,th,div,ul,ol,li,table,img', classes: 'lineheight8px' },
-                '10px': { selector: 'span,p,h1,h2,h3,h4,h5,h6,td,th,div,ul,ol,li,table,img', classes: 'lineheight10px' },
-                '12px': { selector: 'span,p,h1,h2,h3,h4,h5,h6,td,th,div,ul,ol,li,table,img', classes: 'lineheight12px' },
-                '14px': { selector: 'span,p,h1,h2,h3,h4,h5,h6,td,th,div,ul,ol,li,table,img', classes: 'lineheight14px' },
-                '16px': { selector: 'span,p,h1,h2,h3,h4,h5,h6,td,th,div,ul,ol,li,table,img', classes: 'lineheight16px' },
-                '18px': { selector: 'span,p,h1,h2,h3,h4,h5,h6,td,th,div,ul,ol,li,table,img', classes: 'lineheight18px' },
-                '20px': { selector: 'span,p,h1,h2,h3,h4,h5,h6,td,th,div,ul,ol,li,table,img', classes: 'lineheight20px' },
-                '22px': { selector: 'span,p,h1,h2,h3,h4,h5,h6,td,th,div,ul,ol,li,table,img', classes: 'lineheight22px' },
-                '24px': { selector: 'span,p,h1,h2,h3,h4,h5,h6,td,th,div,ul,ol,li,table,img', classes: 'lineheight24px' },
-                '26px': { selector: 'span,p,h1,h2,h3,h4,h5,h6,td,th,div,ul,ol,li,table,img', classes: 'lineheight26px' },
-                '28px': { selector: 'span,p,h1,h2,h3,h4,h5,h6,td,th,div,ul,ol,li,table,img', classes: 'lineheight20px' },
-                '30px': { selector: 'span,p,h1,h2,h3,h4,h5,h6,td,th,div,ul,ol,li,table,img', classes: 'lineheight30px' },
-                '32px': { selector: 'span,p,h1,h2,h3,h4,h5,h6,td,th,div,ul,ol,li,table,img', classes: 'lineheight32px' },
-                '34px': { selector: 'span,p,h1,h2,h3,h4,h5,h6,td,th,div,ul,ol,li,table,img', classes: 'lineheight34px' },
-                '36px': { selector: 'span,p,h1,h2,h3,h4,h5,h6,td,th,div,ul,ol,li,table,img', classes: 'lineheight36px' },
-                '38px': { selector: 'span,p,h1,h2,h3,h4,h5,h6,td,th,div,ul,ol,li,table,img', classes: 'lineheight38px' },
-                '40px': { selector: 'span,p,h1,h2,h3,h4,h5,h6,td,th,div,ul,ol,li,table,img', classes: 'lineheight40px' },
-                '44px': { selector: 'span,p,h1,h2,h3,h4,h5,h6,td,th,div,ul,ol,li,table,img', classes: 'lineheight44px' },
-                '48px': { selector: 'span,p,h1,h2,h3,h4,h5,h6,td,th,div,ul,ol,li,table,img', classes: 'lineheight48px' },
-                '56px': { selector: 'span,p,h1,h2,h3,h4,h5,h6,td,th,div,ul,ol,li,table,img', classes: 'lineheight56px' }
+                '2px': {selector: 'span,p,h1,h2,h3,h4,h5,h6,td,th,div,ul,ol,li,table,img', classes: 'lineheight2px'},
+                '4px': {selector: 'span,p,h1,h2,h3,h4,h5,h6,td,th,div,ul,ol,li,table,img', classes: 'lineheight4px'},
+                '6px': {selector: 'span,p,h1,h2,h3,h4,h5,h6,td,th,div,ul,ol,li,table,img', classes: 'lineheight6px'},
+                '8px': {selector: 'span,p,h1,h2,h3,h4,h5,h6,td,th,div,ul,ol,li,table,img', classes: 'lineheight8px'},
+                '10px': {selector: 'span,p,h1,h2,h3,h4,h5,h6,td,th,div,ul,ol,li,table,img', classes: 'lineheight10px'},
+                '12px': {selector: 'span,p,h1,h2,h3,h4,h5,h6,td,th,div,ul,ol,li,table,img', classes: 'lineheight12px'},
+                '14px': {selector: 'span,p,h1,h2,h3,h4,h5,h6,td,th,div,ul,ol,li,table,img', classes: 'lineheight14px'},
+                '16px': {selector: 'span,p,h1,h2,h3,h4,h5,h6,td,th,div,ul,ol,li,table,img', classes: 'lineheight16px'},
+                '18px': {selector: 'span,p,h1,h2,h3,h4,h5,h6,td,th,div,ul,ol,li,table,img', classes: 'lineheight18px'},
+                '20px': {selector: 'span,p,h1,h2,h3,h4,h5,h6,td,th,div,ul,ol,li,table,img', classes: 'lineheight20px'},
+                '22px': {selector: 'span,p,h1,h2,h3,h4,h5,h6,td,th,div,ul,ol,li,table,img', classes: 'lineheight22px'},
+                '24px': {selector: 'span,p,h1,h2,h3,h4,h5,h6,td,th,div,ul,ol,li,table,img', classes: 'lineheight24px'},
+                '26px': {selector: 'span,p,h1,h2,h3,h4,h5,h6,td,th,div,ul,ol,li,table,img', classes: 'lineheight26px'},
+                '28px': {selector: 'span,p,h1,h2,h3,h4,h5,h6,td,th,div,ul,ol,li,table,img', classes: 'lineheight20px'},
+                '30px': {selector: 'span,p,h1,h2,h3,h4,h5,h6,td,th,div,ul,ol,li,table,img', classes: 'lineheight30px'},
+                '32px': {selector: 'span,p,h1,h2,h3,h4,h5,h6,td,th,div,ul,ol,li,table,img', classes: 'lineheight32px'},
+                '34px': {selector: 'span,p,h1,h2,h3,h4,h5,h6,td,th,div,ul,ol,li,table,img', classes: 'lineheight34px'},
+                '36px': {selector: 'span,p,h1,h2,h3,h4,h5,h6,td,th,div,ul,ol,li,table,img', classes: 'lineheight36px'},
+                '38px': {selector: 'span,p,h1,h2,h3,h4,h5,h6,td,th,div,ul,ol,li,table,img', classes: 'lineheight38px'},
+                '40px': {selector: 'span,p,h1,h2,h3,h4,h5,h6,td,th,div,ul,ol,li,table,img', classes: 'lineheight40px'},
+                '44px': {selector: 'span,p,h1,h2,h3,h4,h5,h6,td,th,div,ul,ol,li,table,img', classes: 'lineheight44px'},
+                '48px': {selector: 'span,p,h1,h2,h3,h4,h5,h6,td,th,div,ul,ol,li,table,img', classes: 'lineheight48px'},
+                '56px': {selector: 'span,p,h1,h2,h3,h4,h5,h6,td,th,div,ul,ol,li,table,img', classes: 'lineheight56px'}
             },
             style_formats: [
-                { title: '2px',format: '2px' },
-                { title: '4px', format: '4px' },
-                { title: '6px', format: '6px' },
-                { title: '8px', format: '8px' },
-                { title: 'l0px', format: '10px' },
-                { title: '12px', format: '12px' },
-                { title: '14px', format: '14px' },
-                { title: '16px', format: '16px' },
-                { title: '18px', format: '18px' },
-                { title: '20px', format: '20px' },
-                { title: '22px', format: '22px' },
-                { title: '24px', format: '24px' },
-                { title: '26px', format: '26px' },
-                { title: '28px', format: '28px' },
-                { title: '30px', format: '30px' },
-                { title: '32px', format: '32px' },
-                { title: '34px', format: '34px' },
-                { title: '36px', format: '36px' },
-                { title: '38px', format: '38px' },
-                { title: '40px', format: '40px' },
-                { title: '44px', format: '44px' },
-                { title: '48px', format: '48px' },
-                { title: '56px', format: '56px' }
+                {title: '2px', format: '2px'},
+                {title: '4px', format: '4px'},
+                {title: '6px', format: '6px'},
+                {title: '8px', format: '8px'},
+                {title: 'l0px', format: '10px'},
+                {title: '12px', format: '12px'},
+                {title: '14px', format: '14px'},
+                {title: '16px', format: '16px'},
+                {title: '18px', format: '18px'},
+                {title: '20px', format: '20px'},
+                {title: '22px', format: '22px'},
+                {title: '24px', format: '24px'},
+                {title: '26px', format: '26px'},
+                {title: '28px', format: '28px'},
+                {title: '30px', format: '30px'},
+                {title: '32px', format: '32px'},
+                {title: '34px', format: '34px'},
+                {title: '36px', format: '36px'},
+                {title: '38px', format: '38px'},
+                {title: '40px', format: '40px'},
+                {title: '44px', format: '44px'},
+                {title: '48px', format: '48px'},
+                {title: '56px', format: '56px'}
             ],
             toolbar_sticky: true,
-            autosave_ask_before_unload: true,
-            autosave_interval: "30s",
-            autosave_prefix: "{path}{query}-{id}-",
-            autosave_restore_when_empty: false,
-            autosave_retention: "2m",
+            // autosave_ask_before_unload: true,
+            // autosave_interval: "30s",
+            // autosave_prefix: "{path}{query}-{id}-",
+            // autosave_restore_when_empty: false,
+            // autosave_retention: "2m",
             image_advtab: true,
             content_css: [
                 '//fonts.googleapis.com/css?family=Lato:300,300i,400,400i',
                 '//www.tiny.cloud/css/codepen.min.css'
             ],
             link_list: [
-                { title: 'My page 1', value: 'http://www.tinymce.com' },
-                { title: 'My page 2', value: 'http://www.moxiecode.com' }
+                {title: 'My page 1', value: 'http://www.tinymce.com'},
+                {title: 'My page 2', value: 'http://www.moxiecode.com'}
             ],
             image_list: [
-                { title: 'My page 1', value: 'http://www.tinymce.com' },
-                { title: 'My page 2', value: 'http://www.moxiecode.com' }
+                {title: 'My page 1', value: 'http://www.tinymce.com'},
+                {title: 'My page 2', value: 'http://www.moxiecode.com'}
             ],
             image_class_list: [
-                { title: 'None', value: '' },
-                { title: 'Some class', value: 'class-name' }
+                {title: 'None', value: ''},
+                {title: 'Some class', value: 'class-name'}
             ],
             importcss_append: true,
             // width : "640",
             file_picker_callback: function (callback, value, meta) {
                 /* Provide file and text for the link dialog */
                 if (meta.filetype === 'file') {
-                    callback('https://www.google.com/logos/google.jpg', { text: 'My text' });
+                    callback('https://www.google.com/logos/google.jpg', {text: 'My text'});
                 }
 
                 /* Provide image and alt text for the image dialog */
                 if (meta.filetype === 'image') {
-                    callback('https://www.google.com/logos/google.jpg', { alt: 'My alt text' });
+                    callback('https://www.google.com/logos/google.jpg', {alt: 'My alt text'});
                 }
 
                 /* Provide alternative source and posted for the media dialog */
                 if (meta.filetype === 'media') {
-                    callback('movie.mp4', { source2: 'alt.ogg', poster: 'https://www.google.com/logos/google.jpg' });
+                    callback('movie.mp4', {source2: 'alt.ogg', poster: 'https://www.google.com/logos/google.jpg'});
                 }
             },
             templates: [
-                { title: 'New Table', description: 'creates a new table', content: '<div class="mceTmpl"><table width="98%%"  border="0" cellspacing="0" cellpadding="0"><tr><th scope="col"> </th><th scope="col"> </th></tr><tr><td> </td><td> </td></tr></table></div>' },
-                { title: 'Starting my story', description: 'A cure for writers block', content: 'Once upon a time...' },
-                { title: 'New list with dates', description: 'New List with dates', content: '<div class="mceTmpl"><span class="cdate">cdate</span><br /><span class="mdate">mdate</span><h2>My List</h2><ul><li></li><li></li></ul></div>' }
+                {
+                    title: 'New Table',
+                    description: 'creates a new table',
+                    content: '<div class="mceTmpl"><table width="98%%"  border="0" cellspacing="0" cellpadding="0"><tr><th scope="col"> </th><th scope="col"> </th></tr><tr><td> </td><td> </td></tr></table></div>'
+                },
+                {title: 'Starting my story', description: 'A cure for writers block', content: 'Once upon a time...'},
+                {
+                    title: 'New list with dates',
+                    description: 'New List with dates',
+                    content: '<div class="mceTmpl"><span class="cdate">cdate</span><br /><span class="mdate">mdate</span><h2>My List</h2><ul><li></li><li></li></ul></div>'
+                }
             ],
 
             template_cdate_format: '[Date Created (CDATE): %m/%d/%Y : %H:%M:%S]',
@@ -172,13 +202,48 @@
             noneditable_noneditable_class: "mceNonEditable",
             toolbar_drawer: 'sliding',
             contextmenu: "link image imagetools table spellchecker",
+            save_enablewhendirty: true,
+            // save_callback : function(element_id, html, body){
+            //     console.log(element_id);
+            //     console.log(html);
+            //     console.log(body);
+            // },
+            save_onsavecallback: function(e) {
+                if($body != null){
+                    if($body.find('.niepewne').length > 0 ){
+                        swal('Uwaga!', 'Przejrzyj swój dokument dokładnie!', 'warning');
+                    }
+                    else{
+                        $('#editorForm').submit();
+                    }
+                }
+            },
             setup: function (editor) {
                 editor.on('init', function (e) {
-                    $('iframe').contents().find("head").append($("<style type='text/css'>*{background-color: #e7e7e7}body{width: 210mm; min-height: 297mm; background-color: #fff; padding: 5mm !important; margin: 0px auto; margin-top: 25px;}body *{ background-color: #fff;}.mce-content-body p{margin: 16px 0;}</style>"));
+                    $('iframe').contents().find("head").append($("<style type='text/css'>*{background-color: #e7e7e7}body{width: 210mm; min-height: 297mm; background-color: #fff; padding: 5mm !important; margin: 0px auto; margin-top: 25px;}body *{ background-color: #fff;}.mce-content-body p{margin: 16px 0;}.niepewne{ background-color: #faffb4; padding: 2px 10px; border-radius: 5px;}</style>"));
                     // editor.setContent('<p><strong>EWA LUDWICZAK-WINTER</strong></p>' +
                     //     'asdasdasd');
-                    editor.setContent('{{ wzor |raw  }}');
+                    editor.setContent('{{ wzor |raw }}');
+                    $doc = editor.getDoc();
+                    $body = $($doc).find('body');
+                    console.log($body.find('.niepewne'));
                 });
+                editor.on('click', function (e) {
+                    if ($(e.target).hasClass('niepewne')) {
+                        $(e.target).removeClass('niepewne');
+                        console.log('Element clicked:', e.target);
+                    }
+                });
+                editor.on('SaveContent', function (e) {
+
+                });
+                // editor.on('mousemove', function (e) {
+                //     console.log('Element hover:', e.target);
+                //     if($(e.target).hasClass('niepewne')){
+                //         alert('niepewne');
+                //         console.log('Element clicked:', e.target);
+                //     }
+                // });
             }
         });
 
@@ -188,7 +253,7 @@
         //
         // });
 
-
+    });
     </script>
 {% endblock %}
 
